--- a/src/components/CalendarItem.scss
+++ b/src/components/CalendarItem.scss
@@ -4,9 +4,102 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .disabled-item{
-    background-color: rgba(190, 188, 188, 0.603);
-    color: transparent;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.today{
+    color: red;
+    height: 3rem;
+    width: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    border: solid red 2px;
+}
+
+.segment-data{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.inline-paragraph{
+    display: inline-block;
+}
+
+.modal-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.appt-item{
+    background-color: rgba(211, 211, 211, 0.671);
+    width: 20rem;
+    height: 2rem;
+    font-size: 1.2rem;
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+}
+
+
+.add-appt{
+    cursor: pointer;
+    height: 2rem;
+    width: 2rem;
+    background-color: rgba(32, 158, 32, 0.637);
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.appointment-modal{
+    height: auto;
+    width: 25rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    &-gym{
+        font-size: 2rem;
+    }
+
+    &-date{
+        font-size: 1.1rem;
+        color: grey;
+    }
+}
+
+.amount-people{
+    color: grey;
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
+
+.gym-times{
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.hide{
+    visibility: hidden;
+}
+
+.remove{
+    display: none;
 }
